--- a/templates/pages/friends.hbs
+++ b/templates/pages/friends.hbs
@@ -1,6 +1,7 @@
 <div class="welcome-section">
-    <h2 data-editable="page-title">{{title}}</h2>
-    <p class="subtitle" data-editable="page-subtitle">{{subtitle}}</p>
+    <h2 data-editable="profile-title">{{profile.title}}</h2>
+    <h3 data-editable="profile-subtitle">{{profile.subtitle}}</h3>
+    <p class="subtitle" data-editable="profile-description">{{profile.description}}</p>
 </div>
 {{#each categories}}
     {{> category}}
