--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -32,7 +32,8 @@
         })();
     </script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <script src="https://unpkg.com/@iconify/iconify@3.1.1/dist/iconify.min.js"></script>
 </head>
 <body class="loading">
     <!-- 滚动进度指示条 -->
