--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -129,5 +129,6 @@
         {{{configJSON}}}
     </script>
     <script src="script.js"></script>
+    <script src="pinyin-match.js"></script>
 </body>
 </html>
